--- a/backend/assets/essay/checkOutput/1644504031165_report1.html
+++ b/backend/assets/essay/checkOutput/1644504031165_report1.html
@@ -1166,16 +1166,16 @@ w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
          <table cellspacing="0" cellpadding="0" width="640" border="0"> 
           <tbody> 
            <tr> 
-            <td class="n_text_red_a" width="400" style="COLOR: #000;FONT-WEIGHT: normal;">编号:<span id="Label_ReportID">2022D_16434673308180000000000000000000285824</span></td> 
+            <td class="n_text_red_a" width="400" style="COLOR: #000;FONT-WEIGHT: normal;">编号:<span id="Label_ReportID">2022D_16445040310480000000000000000000385376</span></td> 
             <td class="t_text_red_a" width="80">检测时间：</td> 
-            <td style="FONT-SIZE: 12px;"><span id="Label_Apply_Time">2022-01-29 22:42:10</span> </td> 
+            <td style="FONT-SIZE: 12px;"><span id="Label_Apply_Time">2022-02-10 14:40:31</span> </td> 
            </tr> 
           </tbody> 
          </table> </td> 
        </tr> 
        <tr> 
         <td class="n_text_green" style="WIDTH: 100px">检测文献：</td> 
-        <td class="n_text_block_a" style="WORD-WRAP: break-word; WIDTH: 539px; WHITE-SPACE: normal; WORD-BREAK: break-all"><span id="Label_Title">check1</span></td> 
+        <td class="n_text_block_a" style="WORD-WRAP: break-word; WIDTH: 539px; WHITE-SPACE: normal; WORD-BREAK: break-all"><span id="Label_Title">1644504029900_sample</span></td> 
        </tr> 
        <tr> 
         <td class="n_text_green" style="WIDTH: 100px">作者：</td> 
@@ -1220,7 +1220,7 @@ w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
         <tr class="n_qubr_fzb"> 
          <td class="n_text_Gm" height="25" width="52">&nbsp; </td> 
          <td class="n_text_Gm" width="158">重复字数：<span class="n_text_block_bss">&nbsp;[&nbsp;<span id="Label_All_CopyWords">0</span> &nbsp;]</span></td> 
-         <td class="n_text_Gm" width="176">总字数：<span class="n_text_block_bss">&nbsp;&nbsp;&nbsp;[&nbsp;<span id="Label_All_Words">4973</span>&nbsp;]</span></td> 
+         <td class="n_text_Gm" width="176">总字数：<span class="n_text_block_bss">&nbsp;&nbsp;&nbsp;[&nbsp;<span id="Label_All_Words">307</span>&nbsp;]</span></td> 
          <td class="n_text_Gm" width="133"><span id="Label1">单篇最大重复字数：</span></td> 
          <td class="n_text_Gm" width="110"><span class="n_text_block_bss">[&nbsp;<span id="Label_Single_Max_Length">0</span>&nbsp;]</span></td> 
         </tr> 
@@ -1252,14 +1252,14 @@ w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
            0%
           </div> </td> 
          <td width="50" align="left">（0）</td> 
-         <td class="n_text_block_a2"> <a style="TEXT-DECORATION: underline">check1_第1部分</a>  (总4973字)</td> 
+         <td class="n_text_block_a2"> <a style="TEXT-DECORATION: underline">1644504029900_sample_第1部分</a>  (总307字)</td> 
         </tr>
        </tbody> 
       </table> 
      </div> 
      <div id="imgdiv" class="n_k3"> 
       <div class="n_pic">
-       <img id="Image1" style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" src="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAloAAAAPCAYAAAA8h2GHAAAAYElEQVR4Xu3WMQEAIAzAsKmfbfhQQL8c8ZCZmQMAQGLO7gIA8JFoAQBERAsAICJaAAAR0QIAiIgWAEBEtAAAIqIFABARLQCAiGgBAERECwAgIloAABHRAgCIvGgBAPDfBTHDAAj2/UJHAAAAAElFTkSuQmCC">
+       <img id="Image1" style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" src="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAloAAAAPCAYAAAA8h2GHAAAAVUlEQVR42u3WMQEAMAwDoKiP7dbAzu7jwANJMgAAfJFpCwDAIdECABAtAADRAgBAtAAARAsAQLQAABAtAADRAgAQLQAARAsAQLQAAEQLAIBntAAAuLcxwwAIMqlj6AAAAABJRU5ErkJggg==">
       </div> 
       <table class="n_table_zs" cellspacing="0" cellpadding="0" width="640" border="0"> 
        <tbody> 
@@ -1282,8 +1282,8 @@ w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
        <tbody> 
         <tr> 
          <td class="n_bf_bt" height="30" width="25">1. </td> 
-         <td class="n_text_block_bs" width="499"><a name="60092668_006"></a>check1_第1部分</td> 
-         <td class="n_table_jiebf_zzs" width="150">总字数：<span class="n_text_block_bs"></span>4973</td> 
+         <td class="n_text_block_bs" width="499"><a name="60092668_006"></a>1644504029900_sample_第1部分</td> 
+         <td class="n_table_jiebf_zzs" width="150">总字数：<span class="n_text_block_bs"></span>307</td> 
         </tr> 
         <tr> 
          <td colspan="3"> 
@@ -1314,7 +1314,7 @@ w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
        </tbody> 
       </table>
       <div class="n_ywnr_content" style="WORD-WRAP: break-word; WORD-BREAK: break-all"> 
-        <p>13、redis的配置文件：在redis根目录下提供redis.conf配置文件；</p><p> 可以配置一些redis服务端运行时的一些参数；</p><p>		 如果不使用配置文件，那么redis会按照默认的参数运行；</p><p>		 如果使用配置文件，在启动redis服务时必须指定所使用的配置文件。 </p><p> 1)、redis配置文件中关于网络的配置：</p><p> port：指定redis服务所使用的端口，默认使用6379。</p><p>	bind: 配置客户端连接redis服务时，所能使用的ip地址，默认可以使用redis服务所在主机上任何一个ip都可以;一般情况下，都会配置一个ip，而且通常是一个真实。 </p><p>	 如果配置了port和bind，则客户端连接redis服务时，必须指定端口和ip：</p><p>	 redis-cli -h 192.168.11.128 -p 6380</p><p>		 redis-cli -h 192.168.11.128 -p 6380 shutdown</p><p>	tcp-keepalive:连接保活策略。</p><p> 2)、常规配置：</p><p> loglevel:配置日志级别.开发阶段配置debug.上线阶段配置notice或者warning.</p><p>	logfile：指定日志文件。redis在运行过程中，会输出一些日志信息；默认情况下，这些日志信息会输出到控制台；我们可以使用logfile配置日志文件，使redis把日志信息输出到指定文件中。</p><p> databases：配置redis服务默认创建的数据库实例个数，默认值是16。</p><p> 3)、安全配置：</p><p> requirepass：设置访问redis服务时所使用的密码；默认不使用。</p><p>	 此参数必须在protected-mode=yes时才起作用。</p><p> 一旦设置了密码验证，客户端连接redis服务时，必须使用密码连接：redis-cli -h ip -p port -a pwd</p><p>14、redis的持久化：redis提供持久化策略，在适当的时机采用适当手段把内存中的数据持久化到磁盘中，每次redis服务启动时，都可以把磁盘上的数据再次加载内存中使用。</p><p> 1、rdb策略：在指定时间间隔内，redis服务执行指定次数的写操作，会自动触发一次持久化操作。</p><p> rdb策略是redis默认的持久化策略，redis服务开启时这种持久化策略就已经默认开启了。</p><p>	save seconds changes：配置持久化策略</p><p>	 dbfilename：配置redis rdb持久化数据存储的文件</p><p>	 dir: 配置redis rdb持久化文件所在目录</p><p> 2、aof策略：采用操作日志来记录进行每一次写操作，每次redis服务启动时，都会重新执行一遍操作日志中的指令。</p><p> 效率低下，redis默认不开启aof功能。</p><p>	appendonly:配置是否开启aof策略</p><p>	 appendfilename：配置操作日志文件</p><p> 小结：根据数据的特点决定开启哪种持久化策略；</p><p> 一般情况，开启rdb足够了。</p><p>15、redis的事务：</p><p> 事务：把一组数据库命令放在一起执行，保证操作原子性，要么同时成功，要么同时失败。</p><p> redis的事务：允许把一组redis命令放在一起，把命令进行序列化，然后一起执行，保证部分原子性。</p><p> 1)multi：用来标记一个事务的开始。</p><p> multi</p><p> set k1 v1</p><p> set k2 v2</p><p> 2)exec：用来执行事务队列中所有的命令。</p><p> exec</p><p> 3)redis的事务只能保证部分原子性：</p><p> a)如果一组命令中，有在压入事务队列过程中发生错误的命令，则本事务中所有的命令都不执行，能够保证事务的原子性。</p><p> multi</p><p>	set k3 v3</p><p>	seta kk vv</p><p>	set k4 v4</p><p>	exec</p><p> b)如果一组命令中，在压入队列过程中正常，但是在执行事务队列命令时发生了错误，则只会影响发生错误的命令，不会影响其它命令的执行，不能够保证事务的原子性。</p><p> multi</p><p>	set k3 v3</p><p>	incr k1</p><p>	set k4 v4</p><p>	exec</p><p> 4)discard：清除所有已经压入队列中的命令，并且结束整个事务。</p><p> multi</p><p> set k5 v5 </p><p> set k6 v6</p><p> discard</p><p> 5)watch：监控某一个键，当事务在执行过程中，此键代码的值发生变化，则本事务放弃执行；否则，正常执行。</p><p> id balance version</p><p> update table set balance=balance-dept.version=version+1</p><p> where id=xxxx and version=100</p><p> set balance 100</p><p> set balance2 1000</p><p> set version 1</p><p> watch version</p><p> multi</p><p> decrby balance 50</p><p> incrby balance2 50</p><p> exec</p><p> 6)unwatch：放弃监控所有的键。</p><p> watch version</p><p> unwach</p><p> multi</p><p> decrby balance 50</p><p> incrby balance2 50</p><p> exec</p><p>16、redis消息的发布与订阅：</p><p> redis客户端订阅频道，消息的发布者往频道上发布消息，所有订阅此频道的客户端都能够接受到消息。</p><p> 1)subscribe：订阅一个或者多个频道的消息。</p><p> subscribe ch1 ch2 ch3 </p><p> 2)publish：将消息发布到指定频道</p><p> publish ch1 hello</p><p> 3)psubcribe：订阅一个或者多个频道的消息，频道名支持通配符。</p><p> subscribe news.*</p><p>activemq2</p><p>17、redis的主从复制：主少从多、主写从读、读写分离、主写同步复制到从。</p><p> 搭建一主二从redis集群：</p><p> 1)、搭建三台redis服务：使用一个redis模拟三台redis服务</p><p> 提供三分redis配置文件：redis6379.conf、redis6380.conf、redis6381.conf</p><p> 修改三份配置文件:以redis6379.conf为例</p><p>	 bind 127.0.0.1</p><p>	 port 6379</p><p>	 pidfile /var/run/redis_6379.pid</p><p>		 logfile "6379.log"</p><p>		 dbfilename dump6379.rdb</p><p> 分别使用三个redis配置文件，启动三个redis服务：</p><p> redis-server redis6379.conf &</p><p>	 redis-server redis6380.conf &</p><p>	 redis-server redis6381.conf &</p><p> 2)通过redis客户端分别连接三台redis服务：</p><p> redis-cli -h 127.0.0.1 -p 6379</p><p>	redis-cli -h 127.0.0.1 -p 6380</p><p>	redis-cli -h 127.0.0.1 -p 6381</p><p> 3)查看三台redis服务在集群中的主从角色：</p><p> info replication</p><p>	默认情况下，所有的redis服务都是主机，即都能写和读，但是都还没有从机。</p><p> 4)先在6379进行写操作：</p><p> set k1 v1</p><p> 三台rdis服务互相独立，互不影响。</p><p> 5)设置主从关系：设从不设主</p><p> 在6380上执行：slaveof 127.0.0.1 6379</p><p> 在6381上执行：slaveof 127.0.0.1 6379</p><p> 6)全量复制：一旦主从关系确定，会自动把主库上已有的数据同步复制到从库。 </p><p> 在6380和6381上执行：keys *</p><p> 7)增量复制：主库写数据会自动同步到从库。</p><p> 在6379上执行：set k2 v2</p><p> 在6380和6381上执行：keys *</p><p> 8)主写从读，读写分离： </p><p> 在6380和6381上执行：set k3 v3 ===报错</p><p> 9)主机宕机、从机原地待命:</p><p> 关闭6379服务：redis-cli -h 127.0.0.1 -p 6379 shutdown</p><p> 查看6380和6381服务的主从角色：info replication</p><p> 10)、主机恢复、一切恢复正常：</p><p> 重启6379服务：redis-server redis6379.conf &</p><p> 客户端连接6379：redis-cli -h 127.0.0.1 -p 6379</p><p> 11)、从机宕机、主机少一个从机、其它从机不变：</p><p> 关闭6380服务： redis-cli -h 127.0.0.1 -p 6380 shutdown</p><p> 查看6379服务的主从角色：info replication</p><p> 查看6381服务的主从角色：info replication</p><p> 12)、从机恢复、需要重新设置主从关系：</p><p> 重启6380服务：redis-server redis6380.conf &</p><p> 客户端连接6380：redis-cli -h 127.0.0.1 -p 6380</p><p> 在6380上执行： slaveof 127.0.0.1 6379</p><p> 13)、从机上位：</p><p> a)主机宕机、从机原地待命：</p><p> 关闭6379服务：redis-cli -h 127.0.0.1 -p 6379 shutdown</p><p> 查看6380和6381服务的主从角色：info replication</p><p> b)从机断开原来主从关系：</p><p> 在6380上执行：slaveof no one</p><p> 查看6380服务的主从角色：info replication</p><p> c)重新设置主从关系：</p><p> 在6381上执行：slaveof 127.0.0.1 6380</p><p> d)之前主机恢复、变成孤家寡人：</p><p> 重启6379服务：redis-server redis6379.conf &</p><p> 客户端连接6379：redis-cli -h 127.0.0.1 -p 6379</p><p> e)天堂变地狱：</p><p> 在6379上执行：slaveof 127.0.0.1 6381</p><p> 在6381上执行：info replication 既是主机又是从机</p><p>小结：一台主机配置多台从机，一台从机又可以配置多台从机，从而形成一个庞大的集群架构。</p><p> 减轻一台主机的压力，但是增加了服务间的延迟时间。</p><p>18、redis哨兵模式：主机宕机、从机上位的自动版。</p><p> 1)搭建一主二从集群架构：(17节前五步)</p><p> 2)提供哨兵配置文件：</p><p> 在redis安装目下创建配置文件：redis_sentinel.conf</p><p> sentinel monitor dc-redis 127.0.0.1 6379 1</p><p> 3)启动哨兵服务：</p><p> redis-sentinel redis_sentinel.conf</p><p> 4)主机宕机：</p><p> 关闭6379服务：redis-cli -h 127.0.0.1 -p 6379 shutdown</p><p> 哨兵程序自动选择从机上位。</p><p> 5)之前主机恢复：自动从属于新的主机。</p><p> 重启6379服务：redis-server redis6379.conf &</p><p> 客户端连接6379：redis-cli -h 127.0.0.1 -p 6379</p><p>19、java操作redis数据库：jedis是redis官方提供的操作redis数据的技术。</p><p> 把所有的redis指令都定义成java工具类的方法，方法名和redis的指令名完全一样；</p><p>			开发通过程序访问redis，只需要使用工具类及其方法即可。</p><p> 在java程序中访问redis：</p><p> 1)创建maven版的java工程</p><p> 2)添加jedis依赖</p><p> dependency</p><p> groupidredis.clients/groupid</p><p> artifactidjedis/artifactid</p><p> version3.1.0/version</p><p> dependency</p><p> 3)创建jedis连接</p><p>	 *关闭linux的防火墙</p><p> redis-cli -h ip -p port</p><p> keys *</p><p> 作业：使用jedis对学过的redis命令操作一遍。</p><p>20、</p>
+        <p>功能图如下所示。本系统分为登录、疾控中心管理、医院管理、农业局管理和检疫站管理五个模块。用户需登录后使用系统。疾控中心管理包括人事管理和数据管理，可以对于系统登录用户进行增删改查，可以查看医院，检疫站以及农业局数据，并进行图表可视化分析，实时监测，做出判断。医院可以上传患者病例，实现治疗全过程追溯。进行确诊患者管理、密切接触者管理、死亡管理、治愈管理，同时可以看到数据面板的数据变化与动态图。其中密切接触者可以转换成确诊患者；确诊患者可以转换成死亡患者或者治愈患者。检疫站，农业局可以分别管理动物检疫数据和种植信息。即对于动物检疫数据和种植信息的增删改查。</p><p>检疫站数据库表：养殖场名称、负责人姓名、联系方式、地址</p>
       </div>
      </div>
 
@@ -1348,4 +1348,4 @@ w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
  
 
 </body></html>
-<!-- ny0aZF0KVZDYeZT9r59o/GJiLy/cGXdi8ZoPEFyTLEkuWhg+OlzkVI4qHLc5+t4QZONjpGlzuI8h8z4hkjpKdg== --> <!-- 6CF4EE962B4E11727BAB8C493FB7ABA5 -->
+<!-- iY7W9QnvT48bfN6kGK1joX4/PiLJyamt/hec2Nkl+RRSqjtz4sTu+Dw7aEMGHxhjYZgcWuXStkHG6dZwBWFSeA== --> <!-- 47E76271B67BB08A1E155F11CE54429A -->
